--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.38.0
-gspread==6.1.4
-gspread_dataframe==3.3.1
 pandas==2.2.2
+gspread==6.1.4
 google-auth==2.35.0
+google-auth-oauthlib==1.2.1
+gspread_dataframe==3.3.1
