--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,7 +1,11 @@
-[google]
+[oauth_client]
 client_id = "XXXXXXXX.apps.googleusercontent.com"
 client_secret = "XXXXXXXX"
+project_id = "il-tuo-progetto"
+auth_uri = "https://accounts.google.com/o/oauth2/auth"
+token_uri = "https://oauth2.googleapis.com/token"
+auth_provider_x509_cert_url = "https://www.googleapis.com/oauth2/v1/certs"
+redirect_uris = ["http://localhost"]
 
 [sheet]
-url = "https://docs.google.com/spreadsheets/d/XXXXXXXXXXXX/edit#gid=0"
-worksheet = "Catalogo"
+url = "https://docs.google.com/spreadsheets/d/AAA.../edit#gid=0"
