--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.38.0
-pandas==2.2.2
-gspread==6.1.4
-gspread-dataframe==3.3.1
-st-aggrid==0.3.4.post3
-google-auth==2.35.0
-google-auth-oauthlib==1.2.1
-google-auth-httplib2==0.2.0
+streamlit>=1.36
+pandas>=2.2
+gspread>=6.1
+gspread_dataframe>=3.3
+google-auth>=2.29
+google-auth-oauthlib>=1.2
+streamlit-aggrid>=0.3.4.post2
